fix: Replace deprecated boxed-primitive constructors, prefer primitives over valueOf()
- Replace `new Integer/Long/Float/Double/Boolean/Short/Byte/Character(...)`
  (deprecated for removal in modern JDKs) with primitives or `.valueOf()`
  where boxing is actually needed.
- Where the target already accepted a primitive or the value only needed
  autoboxing, drop the explicit `.valueOf()`/boxing entirely (e.g.
  `Boolean.valueOf(font.isBold())` -> `font.isBold()`,
  `Integer.valueOf(getRadius().intValue())` -> `getRadius()`).
- Fix resulting `assertEquals` overload ambiguity (int vs Object) by
  unboxing the actual value with `.intValue()` where both sides needed
  to be primitive.